--- a/404.html
+++ b/404.html
@@ -121,7 +121,7 @@
 
     <div class="logo">
       <img
-        src="https://media.licdn.com/dms/image/v2/C4E0BAQHzdfr_aGFkfw/company-logo_200_200/company-logo_200_200/0/1631304776492?e=2147483647&v=beta&t=gpCgZ9p6sPIwmX-LBB3u1NKF68vRwBcSb8Kg1eeG5qM"
+        src="https://raw.githubusercontent.com/luansouzaprogramador/portal_links/main/img.png"
         alt="logo provac"
       />
     </div>
